--- a/register.html
+++ b/register.html
@@ -49,7 +49,7 @@ document.getElementById('registerForm').addEventListener('submit', async functio
     params.append("courseName", courseName);
 
     try {
-        const response = await fetch("https://your-backend-url.com/courses/register", {
+        const response = await fetch("https://localhost:8080:courses/register", {
             method: "POST",
             headers: {
                 "Content-Type": "application/x-www-form-urlencoded"
