--- a/register.html
+++ b/register.html
@@ -49,13 +49,13 @@ document.getElementById('registerForm').addEventListener('submit', async functio
     params.append("courseName", courseName);
 
     try {
-        const response = await fetch("https://localhost:8080:courses/register", {
-            method: "POST",
-            headers: {
-                "Content-Type": "application/x-www-form-urlencoded"
-            },
-            body: params
-        });
+        const response = await fetch("http://localhost:8080/courses/register", {
+    method: "POST",
+    headers: {
+        "Content-Type": "application/x-www-form-urlencoded"
+    },
+    body: params
+});
 
         const result = await response.text();
         alert(result); // or update DOM with the response
